# meta

./: .gitignore  CMakeLists.txt  README.md  meta.h
inc/x/: arr.h  map.h  mat.h  meta.h  queue.h  set.h  string.h  vec.h
test/: arr.c  map.c  mat.c  queue.c  set.c  vec.c
tests/: arr.c  map.c  queue.c  vec.c
